Use Math.clamp, add null asserts, format display count to single decimal place